# fridafuse

./: .editorconfig  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build.yml  ci-cd.yml  lint-and-test.yml  publish-to-test-pypi.yml  test-and-coverage.yml
src/fridafuse/: __about__.py  __init__.py  apk_utils.py  cli.py  constants.py  downloader.py  elf_reader.py  main.py  manifest_utils.py  patcher.py  utils.py
src/fridafuse/commands/: auto.py  native_lib.py
tests/: test_apk_utils.py  test_cli.py  test_downloader.py  test_elf_reader.py  test_main.py  test_manifest_utils.py  test_patcher.py  test_utils.py
