[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fridafuse"
dynamic = ["version", "description", "urls", "authors", "license", "readme"]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.scripts]
fridafuse = "fridafuse.main:main"

[tool.hatch.version]
path = "src/fridafuse/__about__.py"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.editorconfig",
    "/.github",
    "/docs",
    "/ext",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fridafuse"]

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fridafuse tests}"

[tool.coverage.run]
source_pkgs = ["fridafuse", "tests"]
branch = true
parallel = true
omit = [
    "src/fridafuse/__about__.py",
]

[tool.coverage.paths]
fridafuse = ["src/fridafuse"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
src_paths = ["src/fridafuse", "test"]
honor_noqa = true